--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 #kinds {
     display: flex;
     flex-direction: column;
+    width: 20%;
 }
 
 button.active {
@@ -21,8 +22,15 @@ button.active:hover {
 }
 
 #elements-list {
-    width: 700px;
     display: flex;
     flex-wrap: wrap;
     gap: 0.2rem;
+}
+
+#elem-box {
+    border: 1px solid #f0f0f0;
+    padding: 0.5rem;
+}
+
+#bottom-box {
 }
