--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     display: block;
 }
+
 .main-box {
     padding: 1rem;
     display: flex;
@@ -24,7 +25,6 @@ button.active:hover {
 #elements-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 0.2rem;
 }
 
 #elem-box {
@@ -47,4 +47,24 @@ table {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
+}
+
+table.periodic td {
+    padding: 0;
+    border: 0;
+}
+
+table.periodic button {
+    border: 1px solid #f0f0f0;
+    border-radius: 0;
+    margin: 0;
+    width: 100%;
+}
+table.periodic small {
+    font-size: 0.7rem;
+}
+button.elem {
+    border: 1px solid #f0f0f0;
+    border-radius: 0;
+    margin: 0;
 }
