--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+:root {
+    color-scheme: dark;
+    --bg: #212121;
+    --accent-bg: #2b2b2b;
+    --text: #dcdcdc;
+    --text-light: #ababab;
+    --accent: #ffb300;
+    --accent-hover: #ffe099;
+    --accent-text: var(--bg);
+    --code: #f06292;
+    --preformatted: #ccc;
+    --disabled: #111;
+}
+
 body {
     display: block;
 }
@@ -71,6 +85,7 @@ table.periodic button {
     margin: 0;
     width: 100%;
 }
+
 table.periodic button.active {
     border: 1px solid #000000;
 }
@@ -78,6 +93,7 @@ table.periodic button.active {
 table.periodic small {
     font-size: 0.7rem;
 }
+
 button.elem {
     border: 1px solid #f0f0f0;
     border-radius: 0;
