--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body>header {
 }
 
 main {
+    padding: 0.5rem;
     display: flex;
     flex-wrap: wrap;
     gap: 0.5rem;
@@ -47,4 +48,11 @@ main {
 
 table {
     margin: 0;
+}
+
+td:first-child {
+    font-size: 1.4rem
+}
+tr:last-child td:first-child {
+    border: 4px solid green;
 }
