--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,8 @@ table {
 }
 
 td:first-child {
-    font-size: 1.4rem
+    font-size: 1.4rem;
+    font-weight: bold;
 }
 tr:last-child td:first-child {
     border: 4px solid green;
