--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ table {
 td:first-child {
     font-size: 1.1rem;
     font-weight: bold;
+    width: 40%;
 }
 tr:last-child td:first-child {
     border: 4px solid green;
