--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,20 @@ td:first-child {
     font-weight: bold;
     width: 40%;
 }
+
 tr:last-child td:first-child {
     border: 4px solid green;
+}
+
+.example {
+    margin: 0 0.3rem;
+    padding: 0;
+    border: none;
+    color: blue;
+    background-color: inherit;
+}
+.example:enabled:hover {
+    text-decoration: underline;
+    background-color: inherit;
+    /* background-color: #e0e0e0; */
 }
