--- a/css/style.css
+++ b/css/style.css
@@ -16,19 +16,28 @@
     }
 }
 
-/*
-Afegir tipus de font "Franklin Gothic Book" al CSS amb el nom "franklin"
-- regular i bold: fgbr.ttf
-- italic: fgbi.ttf
-*/
 @font-face {
     font-family: franklin;
     src: url("../fonts/fgbr.ttf") format("truetype");
 }
+
 @font-face {
     font-family: franklin;
     src: url("../fonts/fgbi.ttf") format("truetype");
     font-style: italic;
+}
+
+@font-face {
+    font-family: franklin;
+    src: url("../fonts/fgd.ttf") format("truetype");
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: franklin;
+    src: url("../fonts/fgdi.ttf") format("truetype");
+    font-style: italic;
+    font-weight: bold;
 }
 
 body {
@@ -83,6 +92,7 @@ tr:last-child td:first-child {
     color: blue;
     background-color: inherit;
 }
+
 .example:enabled:hover {
     text-decoration: underline;
     background-color: inherit;
